# RPGgame

./: .gitignore  BeginningPlace.cpp  BeginningPlace.h  CMakeLists.txt  Capsule.cpp  Capsule.h  City.cpp  City.h  DeadEnd.cpp  DeadEnd.h  Finale.cpp  Finale.h  FinishingPlace.cpp  FinishingPlace.h  GameEngine.cpp  GameEngine.h  Hero.cpp  Hero.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Makefile  NPC.cpp  NPC.h  Person.cpp  Person.h  Place.cpp  Place.h  README.md  ZOO-game.vpp  description  documentation.doc  main.cpp  variables.cpp  variables.h
